Added ability to show progress in the taskbar; to be changed later and linked up to the overall progress when running automated

--- a/src/MultiAlignRogue/MainWindow.xaml
+++ b/src/MultiAlignRogue/MainWindow.xaml
@@ -14,6 +14,9 @@
     <Window.InputBindings>
         <KeyBinding Key="S" Modifiers="Control" Command="{Binding SaveProjectCommand}" />
     </Window.InputBindings>
+    <Window.TaskbarItemInfo>
+        <TaskbarItemInfo x:Name="taskBarItemInfo"></TaskbarItemInfo>
+    </Window.TaskbarItemInfo>
 
     <Grid Name="MainGrid">
         
