--- a/src/MultiAlignRogue/Alignment/AlignmentSettings.xaml
+++ b/src/MultiAlignRogue/Alignment/AlignmentSettings.xaml
@@ -32,7 +32,7 @@
                     <RowDefinition Height="25"/>
                     <RowDefinition Height="25"/>
                     <RowDefinition Height="25"/>
-                    <RowDefinition Height="25" />
+                    <RowDefinition Height="25" Name="AmtTagDatabaseRow" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="30"/>
@@ -52,11 +52,14 @@
                 <RadioButton Name="SelectAMT" GroupName="ShouldAlignToBaseline" IsChecked="{Binding ShouldAlignToAMT}" ToolTip="Align to an AMT Tag Database" Height="14" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="3" Grid.Column="0" Width="12" />
                 <Label Content="AMT Tag Database" Margin="0,3,0,0" Grid.Row="2" Grid.RowSpan="2" Grid.Column="1" Grid.ColumnSpan="2" />
                 <TextBox TextWrapping="Wrap" IsReadOnly="True" IsEnabled="{Binding ShouldAlignToAMT, UpdateSourceTrigger=PropertyChanged}"
-                         Text="{Binding SelectedDatabaseServer.DatabaseName, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, NotifyOnSourceUpdated=True}"
+                         Text="{Binding Path=DatabaseSelectionViewModel.SelectedDatabaseServer.DatabaseName, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, NotifyOnSourceUpdated=True}"
                          Grid.Row="3" Grid.Column="1" Margin="0,0,5,0" />
-                <Button Content="Select Database" Command="{Binding SelectAMTCommand}" Grid.Row="3" Grid.Column="2"/>
-                <ProgressBar Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,5,0,0" Value="{Binding MassTagLoadProgress}"
-                             Visibility="{Binding ShowMassTagProgress, Converter={StaticResource BoolToVis}}" />
+                <Button Content="Select Database" Command="{Binding Path=DatabaseSelectionViewModel.SelectAMTCommand}"
+                        IsEnabled="{Binding ShouldAlignToAMT, UpdateSourceTrigger=PropertyChanged}"
+                        Grid.Row="3" Grid.Column="2"/>
+                <ProgressBar Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,5,0,0" Value="{Binding Path=DatabaseSelectionViewModel.MassTagLoadProgress}"
+                             Name="AmtTagDatabaseProgressBar"
+                             Visibility="{Binding Path=DatabaseSelectionViewModel.ShowMassTagProgress, Converter={StaticResource BoolToVis}}" />
             </Grid>
         </GroupBox>
 
@@ -77,14 +80,14 @@
                 </Grid.ColumnDefinitions>
 
                 <!-- Mass Tolerance -->
-                <Label Content="Mass Tolerance" Grid.Column="0" FontWeight="Bold" HorizontalAlignment="Center" />
+                <Label Content="Mass Tolerance" Grid.Column="0" HorizontalAlignment="Center" />
                 <xctk:DoubleUpDown HorizontalContentAlignment="Center" Grid.Row="1" Grid.Column="0" Minimum="0" Increment="1.0"
-                                   Value="{Binding MassTolerance, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}" />
+                                   Value="{Binding Path=DatabaseSelectionViewModel.MassTolerance, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}" />
 
                 <!-- Net Tolerance -->
-                <Label Content="NET Tolerance" HorizontalAlignment="Center" Grid.Row="0" Grid.Column="2" FontWeight="Bold" />
+                <Label Content="NET Tolerance" HorizontalAlignment="Center" Grid.Row="0" Grid.Column="2" />
                 <xctk:DoubleUpDown HorizontalContentAlignment="Center" Grid.Row="1" Grid.Column="2" Minimum="0" Increment="0.1" Maximum="1.0"
-                                   Value="{Binding NetTolerance, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
+                                   Value="{Binding Path=DatabaseSelectionViewModel.NetTolerance, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
 
             </Grid>
         </GroupBox>
@@ -108,21 +111,21 @@
                 </Grid.ColumnDefinitions>
 
                 <!-- Alignment Algorithm -->
-                <Label Content="Alignment Algorithm" FontWeight="Bold" HorizontalAlignment="Center" Grid.Row="0" Grid.Column="0" />
+                <Label Content="Alignment Algorithm" HorizontalAlignment="Center" Grid.Row="0" Grid.Column="0" />
                 <ComboBox SelectedItem="{Binding SelectedAlignmentAlgorithm}" Grid.Row="1" Grid.Column="0"
                               ItemsSource="{Binding AlignmentAlgorithms, UpdateSourceTrigger=PropertyChanged}" />
 
                 <!-- Calibration Method -->
-                <Label Content="Calibration Method" FontWeight="Bold"  HorizontalContentAlignment="Center" Grid.Row="0" Grid.Column="2" />
+                <Label Content="Calibration Method" HorizontalContentAlignment="Center" Grid.Row="0" Grid.Column="2" />
                 <ComboBox SelectedItem="{Binding SelectedCalibrationType}" Grid.Row="1" Grid.Column="2"
                           ItemsSource="{Binding CalibrationOptions}" />
                 
                 <!-- # NET Sections -->
-                <Label Content="# NET Sections" Grid.Row="2" Grid.Column="0" FontWeight="Bold" HorizontalAlignment="Center" />
+                <Label Content="# NET Sections" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" />
                 <xctk:IntegerUpDown Grid.Row="3" Grid.Column="0" Minimum="0" Value="{Binding AlignmentNumTimeSections, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                 
                 <!-- Contraction Factor -->
-                <Label Content="Contraction Factor" Grid.Row="2" Grid.Column="2" FontWeight="Bold" HorizontalAlignment="Center" />
+                <Label Content="Contraction Factor" Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" />
                 <xctk:IntegerUpDown Grid.Row="3" Grid.Column="2" Value="{Binding AlignmentContractionFactor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             </Grid>
         </GroupBox>
@@ -130,7 +133,7 @@
         <ProgressBar Grid.Row="6" Grid.Column="0" Value="{Binding AlignmentProgress}" Height="25"
                              Visibility="{Binding ShowAlignmentProgress, Converter={StaticResource BoolToVis}}" />
         <!-- Buttons -->
-        <Button Content="Align Datasets" HorizontalAlignment="Left" Height="25" Width="125" Command="{Binding AlignCommand}" Grid.Row="7" Margin="0,0,0,0" />
-        <Button Content="Display Alignment" Command="{Binding DisplayAlignmentCommand}" HorizontalAlignment="Right" Height="25" Width="125" Grid.Row="7" Margin="0,0,0,0" />
+        <Button Content="Align Datasets" HorizontalAlignment="Left" Height="25" Width="125" Command="{Binding AlignCommand}" Grid.Row="7" />
+        <Button Content="Display Alignment" Command="{Binding DisplayAlignmentCommand}" HorizontalAlignment="Right" Height="25" Width="125" Grid.Row="7" />
     </Grid>
 </UserControl>
