--- a/src/MultiAlignRogue/MainWindow.xaml
+++ b/src/MultiAlignRogue/MainWindow.xaml
@@ -16,7 +16,7 @@
     </Window.InputBindings>
 
     <Grid Name="MainGrid">
-        
+
         <!-- Menu -->
         <Menu Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Top" Width="{Binding ElementName=MainGrid,Path=ActualWidth}">
             <MenuItem Header="File">
@@ -35,7 +35,7 @@
                 <MenuItem Header="Run Full Workflow" Command="{Binding RunFullWorkflowCommand}"/>
             </MenuItem>
         </Menu>
-        
+
         <!-- Actual content -->
         <Grid Margin="10,25,10,10">
             <Grid.ColumnDefinitions>
@@ -51,8 +51,18 @@
                 </Grid.RowDefinitions>
 
                 <TextBlock FontSize="16" Grid.Row="0" Margin="0,0,0,3">Working Data Files</TextBlock>
-
-                <DataGrid Name="FileSelectionDataGrid" Grid.Row="1" Margin="0,0,10,0"
+                <ProgressBar Value="{Binding ProgressTracker}"
+                                     Margin="6,536,11,-1" RenderTransformOrigin="0.5,0.5" Grid.Row="1">
+                    <ProgressBar.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform ScaleY="-1"/>
+                            <SkewTransform/>
+                            <RotateTransform/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </ProgressBar.RenderTransform>
+                </ProgressBar>
+                <DataGrid Name="FileSelectionDataGrid" Grid.Row="1" Margin="0,0,10,29"
                   AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserAddRows="False" 
                   ItemsSource="{Binding Datasets, UpdateSourceTrigger=PropertyChanged}">
                     <DataGrid.Resources>
@@ -130,26 +140,26 @@
                             <ColumnDefinition Width="3" />
                             <ColumnDefinition Width=" 50*" />
                         </Grid.ColumnDefinitions>
-                        
+
                         <!-- Clustering Method -->
                         <TextBlock Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" FontWeight="Bold">Clustering Method</TextBlock>
                         <ComboBox Grid.Row="1" Grid.Column="0" SelectedItem="{Binding SelectedLcmsFeatureClusteringAlgorithm}"
                               ItemsSource="{Binding ClusteringMethods}" Height="22" />
-                        
+
                         <!-- Distance Function -->
                         <TextBlock Grid.Row="0" Grid.Column="2" FontWeight="Bold" HorizontalAlignment="Center">Distance Function</TextBlock>
                         <ComboBox Grid.Row="1" Grid.Column="2" SelectedItem="{Binding SelectedDistanceFunction}" ItemsSource="{Binding DistanceMetrics}" />
-                        
+
                         <!-- Centroid Representation -->
                         <TextBlock Grid.Row="3" Grid.Column="0"  FontWeight="Bold" HorizontalAlignment="Center">Centroid Representation</TextBlock>
                         <ComboBox Grid.Row="4" Grid.Column="0" SelectedItem="{Binding SelectedCentroidMethod}" ItemsSource="{Binding CentroidRepresentations}" />
 
                         <CheckBox Grid.Row="4" Grid.Column="2" Content="Separate by Charge" FontWeight="Bold" HorizontalAlignment="Center"
                                   VerticalAlignment="Center" IsChecked="{Binding ShouldSeparateByCharge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                        
+
                         <ProgressBar Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="3" Value="{Binding ProgressPercent}"
                                      Visibility="{Binding ShouldShowProgress, Converter={StaticResource BoolToVis}}" />
-                        
+
                         <Button Grid.Row="8" Grid.Column="0" Content="Cluster Features" Command="{Binding ClusterFeaturesCommand}" Width="125" HorizontalAlignment="Left" />
                         <Button Grid.Row="8" Grid.Column="2" Content="View Clusters" Command="{Binding DisplayClustersCommand}" Width="125" HorizontalAlignment="Right" />
                     </Grid>
