--- a/src/MultiAlignRogue/MainWindow.xaml
+++ b/src/MultiAlignRogue/MainWindow.xaml
@@ -51,8 +51,9 @@
                 </Grid.RowDefinitions>
 
                 <TextBlock FontSize="16" Grid.Row="0" Margin="0,0,0,3">Working Data Files</TextBlock>
-                <ProgressBar Value="{Binding ProgressTracker}"
-                                     Margin="6,536,11,-1" RenderTransformOrigin="0.5,0.5" Grid.Row="1">
+                <ProgressBar Name="WorkflowProgressBar" Value="{Binding ProgressTracker}"
+                                     Margin="2,0,11,0" RenderTransformOrigin="0.5,0.5" Grid.Row="1" Visibility="{Binding ShouldShowProgress, Converter={StaticResource BoolToVis}}"
+                             IsVisibleChanged="WorkflowProgressBar_OnIsVisibleChanged" Height="26" VerticalAlignment="Bottom">
                     <ProgressBar.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform ScaleY="-1"/>
@@ -62,9 +63,9 @@
                         </TransformGroup>
                     </ProgressBar.RenderTransform>
                 </ProgressBar>
-                <DataGrid Name="FileSelectionDataGrid" Grid.Row="1" Margin="0,0,10,29"
+                <DataGrid Name="FileSelectionDataGrid" Grid.Row="1" Margin="0,0,10,0"
                   AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserAddRows="False" 
-                  ItemsSource="{Binding Datasets, UpdateSourceTrigger=PropertyChanged}">
+                  ItemsSource="{Binding Datasets, UpdateSourceTrigger=PropertyChanged}" ScrollViewer.CanContentScroll="False">
                     <DataGrid.Resources>
                         <Style TargetType="DataGridRow">
                             <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
